--- a/pom.xml
+++ b/pom.xml
@@ -25,5 +25,10 @@
         <version>7.1.0</version>
         <scope>compile</scope>
     </dependency>
+    <dependency>
+        <groupId>org.apache.commons</groupId>
+        <artifactId>commons-lang3</artifactId>
+        <version>RELEASE</version>
+    </dependency>
 </dependencies>
 </project>
